[project]
name = "pythia"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "docling>=2.91.0",
    "llama-index-core>=0.14.20",
    "ollama>=0.6.1",
    "peft>=0.19.0",
    "pydantic-settings[toml]>=2.14.0",
    "pymupdf>=1.27.2.3",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
]

[project.scripts]
pythia = "pythia.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pythia"]

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
