[project]
name = "preprocess"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.88.0",
    "llama-index-core>=0.14.20",
    "ollama>=0.6.1",
    "peft>=0.19.0",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
]

[project.scripts]
preprocess = "preprocess.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preprocess"]
